--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,11 +11,18 @@ Version: 1.0
 @import "compass";
 @import "compass/reset";
 
-@import "typography";
 @import "variables";
+@import "typography";
 
 @import "layout/header";
+@import "layout/footer";
+@import "layout/single_page";
+
+html{
+    height: 100%;
+}
 
 body{
     background-color: white;
+    height: 100%;
 }
