--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -1,4 +1,5 @@
 body{
+    font-family: 'Quicksand', sans-serif;
     font-size: 20px;
 }
 
@@ -7,13 +8,11 @@ p{
 }
 
 h1{
-    font-size: 30px;
+    font-size: 35px;
+    font-weight: 600;
 }
 
 a{
     cursor: pointer;
     text-decoration: none;
-    &:hover{
-        
-    }
 }
