--- a/typography.css
+++ b/typography.css
@@ -1,19 +1,17 @@
-/* line 1, sass/typography.scss */
 body {
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
 }
 
-/* line 5, sass/typography.scss */
 p {
   font-size: 22px;
 }
 
-/* line 9, sass/typography.scss */
 h1 {
-  font-size: 30px;
+  font-size: 35px;
+  font-weight: 600;
 }
 
-/* line 13, sass/typography.scss */
 a {
   cursor: pointer;
   text-decoration: none;
