--- a/layout/single_page.css
+++ b/layout/single_page.css
@@ -1,12 +1,66 @@
-.single_page {
-  margin: 0 auto;
-  margin-top: 150px;
-  margin-bottom: 60px;
-  max-width: 1000px;
-  min-height: 65%;
-}
-.single_page .single_page_title {
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 20px;
-}
+/*
+Error: Undefined variable: "$maxwidth".
+        on line 5 of F:/Programme/XAMPP/htdocs/nlp/wp-content/themes/nlp-one/sass/layout/single_page.scss
+
+1: .single_page{
+2:     margin: 0 auto;
+3:     margin-top: 150px;
+4:     margin-bottom: 60px;
+5:     max-width: $maxwidth;
+6:     min-height: 65%;
+7:     padding: 0 20px;
+8: 
+9:     .single_page_title{
+10:         margin: 0 auto;
+
+Backtrace:
+F:/Programme/XAMPP/htdocs/nlp/wp-content/themes/nlp-one/sass/layout/single_page.scss:5
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/script/tree/variable.rb:49:in `_perform'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/script/tree/node.rb:58:in `perform'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block (2 levels) in visit_rule'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `map'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block in visit_rule'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:432:in `visit_rule'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `map'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:161:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:10:in `visit'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/root_node.rb:36:in `css_tree'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/tree/root_node.rb:20:in `render'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/engine.rb:284:in `render'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:494:in `update_stylesheet'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `each'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:331:in `block in watch'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+E:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.4.25/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined variable: \"$maxwidth\".\A         on line 5 of F:/Programme/XAMPP/htdocs/nlp/wp-content/themes/nlp-one/sass/layout/single_page.scss\A \A 1: .single_page{\A 2:     margin: 0 auto;\A 3:     margin-top: 150px;\A 4:     margin-bottom: 60px;\A 5:     max-width: $maxwidth;\A 6:     min-height: 65%;\A 7:     padding: 0 20px;\A 8: \A 9:     .single_page_title{\A 10:         margin: 0 auto;"; }
