--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,11 +1,11 @@
 
 .topbar{
     width: 100%;
-    background-color: $colorDarkGray;
+    background-color: $colorPrimaryDark;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-right: 0;
+    margin-right: 0px;
     margin-left: auto;
     height: 30px;
     margin-bottom: -10px;
@@ -13,6 +13,7 @@
     z-index: 90;
     
     .topbar_menu{
+        padding-right: 10px;
         ul{
             display: flex;
             justify-content: space-between;
@@ -28,7 +29,7 @@
                 }
                 
                 &:hover{
-                    background-color: $colorDarkYellow;
+                    background-color: $colorSecondary;
                 }
 
                 ul{
@@ -42,7 +43,7 @@
         padding-top: 5px;
         padding-bottom: 5px;
         margin-left: 5px;
-        margin-right: 5px;
+        margin-right: 15px;
         height: 20px;
         a{
             .social_button{
@@ -54,11 +55,23 @@
 
     .topbar_logo{
         height: 20px;
+        width: 10px;
+        padding-right: 35px;
+        a{
+            svg{
+                width: auto;
+                height: 100%;
+            }
 
-        img{
-            width: auto;
-            height: 100%;
+            &:hover{
+                svg{
+                    path{
+                    fill: $colorSecondary;
+                    }
+                }
+            }
         }
+        
     }
 
     @media (max-width: $breakpoint-phone) {
@@ -93,6 +106,9 @@
             height: 100px;
             transition: height 0.2s;
             pointer-events: auto; 
+
+            
+
             img{
                 display: block;
                 height: 100%;
@@ -101,10 +117,10 @@
         }
 
         .main_menu{
-            background-color: #897E0F;
+            background-color: $colorPrimary;
             flex: 1 1 80%;
             border-radius: 10px;
-            pointer-events: auto; 
+            pointer-events: auto;
 
             ul{
                 display: flex;
@@ -125,16 +141,10 @@
                         color: inherit;
                         width: 100%;
                         display: block;
-                        
-
-                        &:hover{
-                            color: black;
-                        }
                     }
                     
                     &:hover{
-                        background-color: white;
-                        color: black;
+                        background-color: $colorSecondary;
                         box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
 
                         &:last-of-type{
@@ -182,7 +192,7 @@
     }
 
     @media (max-width: $breakpoint-phone) {
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(15px);
         background-color: $colorDarkGray;
         position: fixed;
         top: 0px;
@@ -290,6 +300,7 @@
 
         .mobile_menu{
             ul{
+                backdrop-filter: blur(5px);
                 background-color: $colorDarkGrayTrans;
                 text-decoration: none;
 
@@ -314,6 +325,7 @@
             justify-content: center;
             flex-wrap: nowrap;
             background-color: $colorDarkGrayTrans;
+            backdrop-filter: blur(5px);
             width: 100%;
             padding: 20px 0px;
             a{
