--- a/sass/layout/single_page.scss
+++ b/sass/layout/single_page.scss
@@ -2,8 +2,9 @@
     margin: 0 auto;
     margin-top: 150px;
     margin-bottom: 60px;
-    max-width: 1000px;
+    max-width: $maxwidth;
     min-height: 65%;
+    padding: 0 20px;
 
     .single_page_title{
         margin: 0 auto;
