--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,5 +24,7 @@ html{
 
 body{
     background-color: white;
-    height: 100%;
+    min-height: calc(100% - 130px);
+    position: relative;
+    padding-bottom: 130px;
 }
